# EWA-Reward

./: .env.example  README.md  environment.yml  prompt.py  pyproject.toml  reward.sh  reward_main.py  score_calc.py  test_server.py
.github/workflows/: ci.yml
ewa_reward/: __init__.py  cli.py  config.py  logging.py
examples/demo_03/: request.json
examples/demo_04/: request.json
scripts/: run_ewa_reward.sh  setup_env.sh
tests/: test_cli.py  test_config.py  test_llm.py  test_logging.py  test_metrics.py  test_reward_main.py  test_video.py
