[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ewa-reward"
version = "0.1.0"
description = "EWA-Reward reward service for embodied world-model video evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  {name = "EWA-Reward Authors"}
]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "requests>=2.31",
  "pydantic>=2",
  "numpy>=1.24,<2",
  "opencv-python>=4.8",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=8",
]

[project.scripts]
ewa-reward = "ewa_reward.cli:main"

[tool.setuptools]
py-modules = ["prompt", "score_calc", "reward_main"]

[tool.setuptools.packages.find]
include = ["ewa_reward*"]

[tool.ruff]
line-length = 100
target-version = "py310"
